--- a/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9000
+  port: 6000
   servlet-path: /
 eureka:
   client:
@@ -23,9 +23,9 @@ spring:
 dev:
   spring:
     datasource:
-      url: jdbc:mysql://dbserver:3306/risk?useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://panoramic-test-db:3306/risk?useUnicode=true&characterEncoding=utf-8
       username: root
-      password: 123
+      password: root
       driverClassName: com.mysql.jdbc.Driver
        # 参数
       initialSize: 5
@@ -53,13 +53,13 @@ logging:
 
 # 热发布插件
 
-spring:
-    devtools:
-        restart:
-            #热部署生效
-          enabled: true
-            #设置重启的目录
-            #additional-paths: src/main/java
-            #classpath目录下的WEB-INF文件夹内容修改不重启
-          exclude: WEB-INF/**
+#spring:
+#    devtools:
+#        restart:
+#            #热部署生效
+#          enabled: true
+#            #设置重启的目录
+#            #additional-paths: src/main/java
+#            #classpath目录下的WEB-INF文件夹内容修改不重启
+#          exclude: WEB-INF/**
 
