--- a/panoramic-monitor-manage-service/pom.xml
+++ b/panoramic-monitor-manage-service/pom.xml
@@ -17,5 +17,9 @@
             <artifactId>panoramic-monitor-manage-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 </project>
