--- a/panoramic-monitor-invoke/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-invoke/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 60001
   servlet-path: /
 security:
   user:
@@ -8,7 +8,7 @@ security:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://user:user@discovery-eureka:8761/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@panoramic.neweplatform.com:8761/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
