--- a/panoramic-monitor-manage-provider/src/main/resources/quartz.properties
+++ b/panoramic-monitor-manage-provider/src/main/resources/quartz.properties
@@ -35,7 +35,7 @@ org.quartz.jobStore.isClustered = true
 # Configure Datasources
 #============================================================================
 org.quartz.dataSource.schedule.driver:com.mysql.jdbc.Driver
-org.quartz.dataSource.schedule.URL:jdbc:mysql://panoramic-test-db:3306/schedule
+org.quartz.dataSource.schedule.URL:jdbc:mysql://panoramic.neweplatform.com:3306/schedule
 org.quartz.dataSource.schedule.user:root
 org.quartz.dataSource.schedule.password:root
 org.quartz.dataSource.schedule.maxConnections:10
