--- a/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 6000
+  port: 5000
   servlet-path: /
 security:
   user:
@@ -14,7 +14,7 @@ eureka:
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
 spring:
   application:
-    name: panoramic-monitor-risk-warning    # 项目名称尽量用小写
+    name: monitor-risk-warning    # 项目名称尽量用小写
   datasource:                           # 指定数据源
     platform: mysql                # 指定数据源类型
 #    schema: classpath:schema.sql        # 指定数据库的建表脚本
