--- a/panoramic-monitor-common/pom.xml
+++ b/panoramic-monitor-common/pom.xml
@@ -26,6 +26,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+	   <dependency>
+		   <groupId>org.springframework</groupId>
+		   <artifactId>spring-jdbc</artifactId>
+	   </dependency>
+	   <dependency>
+		   <groupId>org.aspectj</groupId>
+		   <artifactId>aspectjrt</artifactId>
+	   </dependency>
+	   <dependency>
+		   <groupId>org.aspectj</groupId>
+		   <artifactId>aspectjweaver</artifactId>
+	   </dependency>
 		<!-- Jackson 序列化 start -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
