--- a/panoramic-monitor-manage-provider/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-manage-provider/src/main/resources/application-dev.yml
@@ -24,7 +24,8 @@ spring:
 dev:
   spring:
     datasource:
-      url: jdbc:mysql://test.neweplatform.com:3306/panoramic?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+      masterurl: jdbc:mysql://test.neweplatform.com:3306/panoramic?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+      slaveurl: jdbc:mysql://test.neweplatform.com:3306/panoramic?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
       username: root
       password: root
       driverClassName: com.mysql.jdbc.Driver
