--- a/panoramic-monitor-manage-provider/src/main/resources/pro-quartz.properties
+++ b/panoramic-monitor-manage-provider/src/main/resources/pro-quartz.properties
@@ -35,7 +35,7 @@ org.quartz.jobStore.isClustered = true
 # Configure Datasources
 #============================================================================
 org.quartz.dataSource.schedule.driver:com.mysql.jdbc.Driver
-org.quartz.dataSource.schedule.URL:jdbc:mysql://test.neweplatform.com:3306/schedule
-org.quartz.dataSource.schedule.user:root
+org.quartz.dataSource.schedule.URL:jdbc:mysql://rm-bp1d2s03ka9b803602o.mysql.rds.aliyuncs.com:3306/schedule
+org.quartz.dataSource.schedule.user:xinyiroot
 org.quartz.dataSource.schedule.password:root
 org.quartz.dataSource.schedule.maxConnections:10
