--- a/panoramic-monitor-risk-warning/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-risk-warning/src/main/resources/application-pro.yml
@@ -8,7 +8,7 @@ security:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://user:user@test.neweplatform.com:8761/eureka/,http://user:user@test.neweplatform.com:8762/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@panoramic.neweplatform.com:8761/eureka/,http://user:user@panoramic.neweplatform.com:8762/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
@@ -27,8 +27,8 @@ spring:
 dev:
   spring:
     datasource:
-      url: jdbc:mysql://test.neweplatform.com:3306/risk?useUnicode=true&characterEncoding=utf-8
-      username: root
+      url: jdbc:mysql://rm-bp1d2s03ka9b803602o.mysql.rds.aliyuncs.com:3306/risk?useUnicode=true&characterEncoding=utf-8
+      username: xinyiroot
       password: root
       driverClassName: com.mysql.jdbc.Driver
        # 参数
