--- a/panoramic-monitor-scheduled-task/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-scheduled-task/src/main/resources/application-pro.yml
@@ -7,7 +7,7 @@ security:
     name: user
     password: user
 
-quartzConfig: quartz.properties
+quartzConfig: quartz-pro.properties
 feign:  # 必须配置开启断路器,默认false
    hystrix:
      enabled: true
@@ -21,7 +21,7 @@ ribbon:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://user:user@test.neweplatform.com:8761/eureka/,http://user:user@test.neweplatform.com:8762/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@panoramic.neweplatform.com:8761/eureka/,http://user:user@panoramic.neweplatform.com:8762/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
@@ -29,8 +29,8 @@ spring:
   application:
     name: monitor-service-task    # 项目名称尽量用小写
   datasource:
-    url: jdbc:mysql://test.neweplatform.com:3306/scheduled-task?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-    username: root
+    url: jdbc:mysql://rm-bp1d2s03ka9b803602o.mysql.rds.aliyuncs.com:3306/scheduled-task?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    username: xinyiroot
     password: root
     driverClassName: com.mysql.jdbc.Driver
     initialSize: 5
