--- a/panoramic-monitor-discovery-eureka/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-discovery-eureka/src/main/resources/application-pro.yml
@@ -21,7 +21,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:user@${eureka.instance.hostname}:8082/eureka/,http://user:user@${eureka.instance.hostname}:8082/eureka/
+      defaultZone: http://user:user@116.62.194.143:8761/eureka/,http://user:user@116.62.194.143:8762/eureka/
 #spring:
 # devtools:
 #    restart:
