--- a/panoramic-monitor-manage-service/pom.xml
+++ b/panoramic-monitor-manage-service/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.it.sunder</groupId>
     <artifactId>panoramic-monitor-manage-service</artifactId>
     <dependencies>
         <dependency>
