--- a/panoramic-monitor-common/pom.xml
+++ b/panoramic-monitor-common/pom.xml
@@ -14,6 +14,10 @@
         <encoding.version>UTF-8</encoding.version>
     </properties>
    <dependencies>
+	   <dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-web</artifactId>
+	   </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
