--- a/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
+++ b/panoramic-monitor-risk-warning/src/main/resources/application-dev.yml
@@ -57,10 +57,13 @@ logging:
 
 Email:
   Config:
-    host: smtp.qq.com
-    address: slayersfox@vip.qq.com
-    password: vpmjwahcoqmlbgjg
+    protocol: smtp
+    host: smtp.exmail.qq.com
+    port: 465
+    address: risk-warning@newhope-data.com
+    password: Nhd@1234
     needSSL : true
+    mailContent : 您好，%s%s%s  %s = %s 超出阈值(%s,%s),触发%d级预警  请登录PC端 192.168.1.105:8088 查看预警处理结果
     
 
 # 热发布插件
